--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div>
             <div class="header">
                <div class="logo">
-                <img src="F:\Brototype\SPACEX\logo.webp">
+                <img src="\logo.webp">
                </div> 
                <div class="collection">
                 <p>X COLLECTION</p>
