--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div>
             <div class="header">
                <div class="logo">
-                <img src="\logo.webp">
+                <img src="https://shop.spacex.com/cdn/shop/files/SpaceX_logo_white_6eaf0441-42af-4396-974e-d6dc2f8ff45c_160x.png?v=1614778073">
                </div> 
                <div class="collection">
                 <p>X COLLECTION</p>
